Attempt to fix GK not visible in dark mode

--- a/assets/css/puchi.css
+++ b/assets/css/puchi.css
@@ -98,7 +98,7 @@
 }
 
 .imgButton input[type=checkbox]:checked + label img{
-    filter:none;
+    filter:brightness(110%) contrast(90%);
     opacity: 1;
 }
 
